--- a/chinese-version/rules-chinese.html
+++ b/chinese-version/rules-chinese.html
@@ -149,7 +149,7 @@
         <form>
             <p class="text-application text-competition"> ⽐赛章程
                 <i class="fa-solid fa-arrow-down"></i> </p>
-            <a class="download-button" href="Rules of the Competition - CHINESE .pdf" download>
+            <a class="download-button" href="RulesOfTheCompetition-CHINESE.docx" download>
 
                 <p class="download-text">下载⽐赛章程</p>
 
@@ -165,7 +165,7 @@
                 calisiaarts@gmail.com</spam> <i class="fa-solid fa-arrow-down"></i>
         </p>
         <form>
-            <a class="download-button" href="Application form .docx" download>
+            <a class="download-button" href="ApplicationForm.docx" download>
 
                 <p class="download-text-2">下载⽐赛报名表
                 </p>
