social links on footer english contact

--- a/contact.html
+++ b/contact.html
@@ -134,9 +134,8 @@
             <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
                 <div class="aligncenter">
                     <div class="socialFooter">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-youtube"></i></a>
+                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i class="fa fa-instagram"></i></a>
                     </div>
                     <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
                             Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
