align center on footer

--- a/chinese-version/jury.html
+++ b/chinese-version/jury.html
@@ -81,7 +81,7 @@
         <div class="team-container">
             <div class="jury-box">
                 <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
-                    <h1 class="h1-team">Jury</h1>
+                    <h1 class="h1-team">评委会</h1>
                 </div>
                 <img class="jury-img mb-5" src="slider-images/Byrdy.jpg">
                 <div class="label-photo">
