--- a/chinese-version/rules-chinese.html
+++ b/chinese-version/rules-chinese.html
@@ -94,7 +94,7 @@
 </header>
 <section class="contact">
     <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
-        <h1 class="h1-team">The Competition</h1>
+        <h1 class="h1-team">⽐赛</h1>
     </div>
     <p class="text-application width-form">
         第⼀届国际亨利克·梅尔瑟钢琴⽐赛旨在发现和推⼴来⾃世界各地的才华横溢的钢琴
