link on a chineese flag

--- a/jury.html
+++ b/jury.html
@@ -42,8 +42,7 @@
                                     src="slider-images/icons8-poland-48.png" /></a>
                             <a href="index.html"><img class="img-flag"
                                     src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="chinese-version/index-chinese.html"><img class="img-flag"
-                                    src="slider-images/icons8-china-48.png" /></a>
+                            <a href="chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
                         </div>
                         <button class="hamburger">
                             <i class="fa-solid fa-bars"></i>
@@ -69,8 +68,7 @@
                                     src="slider-images/icons8-poland-48.png" /></a>
                             <a href="index.html"><img class="img-flag"
                                     src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="chinese-version/index-chinese.html"><img class="img-flag"
-                                    src="slider-images/icons8-china-48.png" /></a>
+                            <a href="chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
                         </div>
 
                     </div>
