--- a/polish-version-calisia-web/jury.html
+++ b/polish-version-calisia-web/jury.html
@@ -38,12 +38,9 @@
                             <li class="active"><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
                         </ul>
                         <div class="languages">
-                            <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
-                                    src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="index.html"><img class="img-flag"
-                                    src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="chinese-version/index-chinese.html"><img class="img-flag"
-                                    src="slider-images/icons8-china-48.png" /></a>
+                            <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="../chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
                         </div>
                         <button class="hamburger">
                             <i class="fa-solid fa-bars"></i>
@@ -65,12 +62,9 @@
                             </li>
                         </ul>
                         <div class="languages-2">
-                            <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
-                                    src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="index.html"><img class="img-flag"
-                                    src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="chinese-version/index-chinese.html"><img class="img-flag"
-                                    src="slider-images/icons8-china-48.png" /></a>
+                            <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="../chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
                         </div>
 
                     </div>
