arts changed for A

--- a/polish-version-calisia-web/rulespl.html
+++ b/polish-version-calisia-web/rulespl.html
@@ -100,7 +100,7 @@
                         po śmierci popadł w zapomnienie i nie jest obecnie znany szerszemu gronu melomanów.
                         Laureaci konkursu wystąpią w salach koncertowych w Polsce i Austrii, a wybrani uczestnicy będą
                         mieli szansę wzięcia udziału w kursach mistrzowskich organizowanych przez Fundację Calisia
-                        arts, które zostaną poprowadzone przez uznanych pianistów i pedagogów.
+                        Arts, które zostaną poprowadzone przez uznanych pianistów i pedagogów.
                         Oprócz występów na koncertach finałowych dla laureatów przewidziane są nagrody pieniężne.
                     </p>
                 </div>
