--- a/polish-version-calisia-web/team-pl.html
+++ b/polish-version-calisia-web/team-pl.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="team-text">
                     <p class="p-team">
-                        Fundacja Calisia arts powstała z inicjatywy artystów, pedagogów i animatorów kultury związanych
+                        Fundacja Calisia Arts powstała z inicjatywy artystów, pedagogów i animatorów kultury związanych
                         z Kaliszem. Jej celem jest promocja muzyki klasycznej i poszerzanie oferty kulturalnej Kalisza i
                         Wielkopolski poprzez organizowanie wydarzeń artystycznych o zasięgu krajowym i
                         międzynarodowym. Fundacja Calisia arts ma swoją siedzibę w Kaliszu, najstarszym polskim
