--- a/rules.html
+++ b/rules.html
@@ -99,7 +99,7 @@
             known to a wider circle of music lovers.
             Winners of the competition will perform in concert halls in Poland and Austria, while
             selected participants will have the opportunity to take part in master classes organised by
-            the Calisia arts foundation, which will be conducted by renowned pianists and
+            the Calisia Arts foundation, which will be conducted by renowned pianists and
             pedagogues.
             In addition to performances at the final concerts, there will be cash prizes for the winners.
         </p>
