--- a/team.html
+++ b/team.html
@@ -87,10 +87,10 @@
                 </div>
                 <div class="team-text">
                     <p class="p-team">
-                        The Calisia arts foundation was established on the initiative of artists, educators and
+                        The Calisia Arts foundation was established on the initiative of artists, educators and
                         cultural animators associated with Kalisz. Its aim is to promote classical music and expand
                         the cultural offer of Kalisz and Greater Poland by organising artistic events of national and
-                        international scope. The Calisia arts foundation is based in Kalisz, the oldest Polish city,
+                        international scope. The Calisia Arts foundation is based in Kalisz, the oldest Polish city,
                         which is known for the Calisia grand and upright piano factory.
                         Kalisz is also famous for one of the few schools in the world which educates grand and
                         upright piano builders, renovators and tuners, the Arnold Fibiger Piano Building School, so
