rules applications eng and pln changed

--- a/polish-version-calisia-web/rulespl.html
+++ b/polish-version-calisia-web/rulespl.html
@@ -147,7 +147,7 @@
                 <form>
                     <p class="text-application text-competition"> Regulamin konkursu <i
                             class="fa-solid fa-arrow-down"></i> </p>
-                    <a class="download-button" href="Rules of the Competition - Polish.docx" download>
+                    <a class="download-button" href="Rules of the Competition - PLN.docx" download>
 
                         <p class="download-text">Pobierz regulamin konkursu</p>
 
