--- a/rules.html
+++ b/rules.html
@@ -146,7 +146,7 @@
             <form>
                 <p class="text-application text-competition"> Rules of the competition <i
                         class="fa-solid fa-arrow-down"></i> </p>
-                <a class="download-button" href="Rules Melcer Competition - English.docx" download>
+                <a class="download-button" href="Rules Melcer Competition - ENG.docx" download>
 
                     <p class="download-text">Download rules of the competition</p>
 
