--- a/polish-version-calisia-web/team-pl.html
+++ b/polish-version-calisia-web/team-pl.html
@@ -89,7 +89,7 @@
                         Fundacja Calisia Arts powstała z inicjatywy artystów, pedagogów i animatorów kultury związanych
                         z Kaliszem. Jej celem jest promocja muzyki klasycznej i poszerzanie oferty kulturalnej Kalisza i
                         Wielkopolski poprzez organizowanie wydarzeń artystycznych o zasięgu krajowym i
-                        międzynarodowym. Fundacja Calisia arts ma swoją siedzibę w Kaliszu, najstarszym polskim
+                        międzynarodowym. Fundacja Calisia Arts ma swoją siedzibę w Kaliszu, najstarszym polskim
                         mieście, które kojarzone jest z fabryką fortepianów i pianin Calisia.
                         Kalisz słynie także z jednej z nielicznych na świecie szkół kształcących budowniczych,
                         renowatorów i stroicieli fortepianów i pianin Technikum Budowy Fortepianów im. Arnolda Fibigera,
