--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
                             <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
                         </ul>
                         <div class="languages">
-                            <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
+                            <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
+                                    src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="index.html"><img class="img-flag"
+                                    src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="chinese-version/index-chinese.html"><img class="img-flag"
+                                    src="slider-images/icons8-china-48.png" /></a>
                         </div>
                         <button class="hamburger">
                             <i class="fa-solid fa-bars"></i>
@@ -66,9 +69,12 @@
                             <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
                         </ul>
                         <div class="languages-2">
-                            <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
+                            <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
+                                    src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="index.html"><img class="img-flag"
+                                    src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="chinese-version/index-chinese.html"><img class="img-flag"
+                                    src="slider-images/icons8-china-48.png" /></a>
                         </div>
 
                     </div>
@@ -83,17 +89,37 @@
             <div class="home-content">
                 <div class="tp-caption rev-video customin customout start">
                     <hr class="topline">
-                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500">International <br> Henryk Melcer <br> Piano
-                        Competition</h2>
+                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500">International <br> Henryk Melcer
+                        <br> Piano
+                        Competition
+                    </h2>
                     <hr class="bottomline">
                 </div>
-                <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition" src="slider-images/logo-wersja-1.jpg"/>
+                <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
+                    src="slider-images/logo-wersja-1.jpg" />
                 <div class="tp-caption rev-video2 customin customout start">
-                    <div data-aos="fade-up" data-aos-duration="1000" class="deadline">Application deadline <br>31.03.2023</div>
+                    <div class="deadline">
+                        <a class="download-button" href="HMC-23-RESULTS-ENG-PDF.pdf" target="_blank" download>
+                            Results of the Competition
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
+    </section>\
+
+    <!--<div class="width-form">
+            <p class="text-application text-competition">Send your application to our e-mail: <spam
+                    class="bank-account-letters">
+                    calisiaarts@gmail.com</spam> <i class="fa-solid fa-arrow-down"></i>
+            </p>
+            <form>
+                <a class="download-button" href="Application form .docx" download>
+
+                    <p class="download-text-2">Download Application</p>
+
+                </a>
+            </form>-->
 
     <!--/ FOOTER SECTION-->
     <section id="footer" class="footer-wrapper text-center">
@@ -101,8 +127,10 @@
             <div class="title text-center">
                 <div class="aligncenter">
                     <div class="socialFooter">
-                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i class="fa fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i class="fa fa-instagram"></i></a>
+                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i
+                                class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                     </div>
                     <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
                             Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
