results - chineese version

--- a/chinese-version/index-chinese.html
+++ b/chinese-version/index-chinese.html
@@ -33,23 +33,25 @@
                         <a href="index-chinese.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
                                 alt="logo, gold letters, calisia arts" /></a>
                         <ul class="nav navbar-nav">
-                            <li class="active"><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a></li>
+                            <li class="active"><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a>
+                            </li>
                             <li><a data-scroll href="about-chinese.html" class="int-collapse-menu">简介</a>
                             </li>
                             <li><a data-scroll href="team-chinese.html" class="int-collapse-menu"> 团队</a></li>
                             <li><a data-scroll href="contact-chinese.html" class="int-collapse-menu">联系方式</a>
                             </li>
-                            <li class="li-hamburger"><a data-scroll href="rules-chinese.html"
-                                class="int-collapse-menu">
-                                ⽐赛</a></li>
-                                <li class="li-hamburger"><a data-scroll href="jury.html"
-                                    class="int-collapse-menu">
+                            <li class="li-hamburger"><a data-scroll href="rules-chinese.html" class="int-collapse-menu">
+                                    ⽐赛</a></li>
+                            <li class="li-hamburger"><a data-scroll href="jury.html" class="int-collapse-menu">
                                     评委会</a></li>
                         </ul>
                         <div class="languages">
-                            <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
+                            <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag"
+                                    src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="../index.html"><img class="img-flag"
+                                    src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="index-chinese.html"><img class="img-flag"
+                                    src="slider-images/icons8-china-48.png" /></a>
                         </div>
                         <button class="hamburger">
                             <i class="fa-solid fa-bars"></i>
@@ -57,25 +59,30 @@
                     </div>
                     <div class="hamburger-list-div">
                         <ul class="hamburger-list">
-                            <li class="li-hamburger"><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a>
+                            <li class="li-hamburger"><a data-scroll href="index-chinese.html"
+                                    class="int-collapse-menu">主⻚</a>
                             </li>
                             <li class="li-hamburger"><a data-scroll href="about-chinese.html"
                                     class="int-collapse-menu">简介</a>
                             </li>
-                            <li class="li-hamburger"><a data-scroll href="team-chinese.html" class="int-collapse-menu"> 团队</a>
+                            <li class="li-hamburger"><a data-scroll href="team-chinese.html" class="int-collapse-menu">
+                                    团队</a>
                             </li>
                             <li class="li-hamburger"><a data-scroll href="contact-chinese.html"
                                     class="int-collapse-menu">联系方式</a></li>
-                            <li class="li-hamburger"><a data-scroll href="rules-chinese.html"
-                                        class="int-collapse-menu">
-                                        ⽐赛</a></li>
-                            <li class="li-hamburger"><a data-scroll href="jury.html" class="int-collapse-menu">评委会</a></li>
-                                    
+                            <li class="li-hamburger"><a data-scroll href="rules-chinese.html" class="int-collapse-menu">
+                                    ⽐赛</a></li>
+                            <li class="li-hamburger"><a data-scroll href="jury.html" class="int-collapse-menu">评委会</a>
+                            </li>
+
                         </ul>
                         <div class="languages-2">
-                            <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
+                            <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag"
+                                    src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="../index.html"><img class="img-flag"
+                                    src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="index-chinese.html"><img class="img-flag"
+                                    src="slider-images/icons8-china-48.png" /></a>
                         </div>
 
                     </div>
@@ -90,12 +97,17 @@
             <div class="home-content">
                 <div class="tp-caption rev-video customin customout start">
                     <hr class="topline">
-                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500">第一届亨利克·  <br>梅尔瑟国际钢琴比赛</h2>
+                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500">第一届亨利克· <br>梅尔瑟国际钢琴比赛</h2>
                     <hr class="bottomline">
                 </div>
-                <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition" src="slider-images/logo-wersja-1.jpg"/>
+                <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
+                    src="slider-images/logo-wersja-1.jpg" />
                 <div class="tp-caption rev-video2 customin customout start">
-                    <div data-aos="fade-up" data-aos-duration="1000" class="deadline">報名截止日期 <br>31.03.2023</div>
+                    <div class="deadline">
+                        <a class="download-button" href="HMC-23-RESULTS-ENG-PDF.pdf" target="_blank" download>
+                            Results of the Competition
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -107,8 +119,10 @@
             <div class="title text-center">
                 <div class="aligncenter">
                     <div class="socialFooter">
-                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i class="fa fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i class="fa fa-instagram"></i></a>
+                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i
+                                class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                     </div>
                     <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
                             Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
