--- a/index.html
+++ b/index.html
@@ -106,20 +106,7 @@
                 </div>
             </div>
         </div>
-    </section>\
-
-    <!--<div class="width-form">
-            <p class="text-application text-competition">Send your application to our e-mail: <spam
-                    class="bank-account-letters">
-                    calisiaarts@gmail.com</spam> <i class="fa-solid fa-arrow-down"></i>
-            </p>
-            <form>
-                <a class="download-button" href="Application form .docx" download>
-
-                    <p class="download-text-2">Download Application</p>
-
-                </a>
-            </form>-->
+    </section>
 
     <!--/ FOOTER SECTION-->
     <section id="footer" class="footer-wrapper text-center">
