results-polish version

--- a/polish-version-calisia-web/indexpl.html
+++ b/polish-version-calisia-web/indexpl.html
@@ -88,7 +88,11 @@
                 </div>
                 <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition" src="slider-images/logo-wersja-1.jpg"/>
                 <div class="tp-caption rev-video2 customin customout start">
-                    <div data-aos="fade-up" data-aos-duration="1000" class="deadline">Termin zgłoszeń do<br>31.03.2023</div>
+                    <div class="deadline">
+                        <a class="download-button" href="HMC-23-WYNIKI-PL-PDF.pdf" target="_blank" download>
+                            Wyniki Konkursu
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
