results files changed

--- a/chinese-version/index-chinese.html
+++ b/chinese-version/index-chinese.html
@@ -104,7 +104,7 @@
                     src="slider-images/logo-wersja-1.jpg" />
                 <div class="tp-caption rev-video2 customin customout start">
                     <div class="deadline">
-                        <a class="download-button" href="HMC-23-RESULTS-ENG-PDF.pdf" target="_blank" download>
+                        <a class="download-button" href="HMC-RESULTS-ENG.pdf" target="_blank" download>
                             Results of the Competition
                         </a>
                     </div>
