--- a/polish-version-calisia-web/indexpl.html
+++ b/polish-version-calisia-web/indexpl.html
@@ -89,7 +89,7 @@
                 <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition" src="slider-images/logo-wersja-1.jpg"/>
                 <div class="tp-caption rev-video2 customin customout start">
                     <div class="deadline">
-                        <a class="download-button" href="HMC-23-WYNIKI-PL-PDF.pdf" target="_blank" download>
+                        <a class="download-button" href="HMC-WYNIKI-PL.pdf" target="_blank" download>
                             Wyniki Konkursu
                         </a>
                     </div>
