--- a/polish-version-calisia-web/foto.html
+++ b/polish-version-calisia-web/foto.html
@@ -87,88 +87,106 @@
   </header>
 
   <div class="container">
-    <h2>Photo gallery from the Concerts of the winners of the 1st Henryk Melcer International Piano Competition</h2>
-
-    <!-- <div id="lightgallery">
-            <a href="/slider-images/team-1.JPG">
-                <img alt="img1" src="/slider-images/team-1.JPG" />
-            </a>
-            <a href="/slider-images/team-1.JPG">
-                <img alt="img2" src="/slider-images/team-1.JPG" />
-            </a>
-        </div> -->
-
+    <h2>Fotorelacja z koncertow laureatow I Miedzynarodowego Konkursu Pianistycznego im. H. Melcera </h2>
     <div class="lightgallery">
       <a class="image" href="/slider-images/2.JPG">
         <img alt="img2" src="/slider-images/2.JPG" />
+        <div class="caption">
+          <p>Koncert laureatów w PSM I i II st. im. H. Melcera w Kaliszu, laureaci konkursu</p>
+        </div>
       </a>
 
       <a class="image" href="/slider-images/3.JPG">
         <img alt="img2" src="/slider-images/3.JPG" />
+        <p>Koncert laureatów w PSM I i II st. im. H. Melcera w Kaliszu, Zofia Jamróz - II nagroda,
+          Kategoria E</p>
       </a>
 
       <a class="image" href="/slider-images/4.JPG">
         <img alt="img2" src="/slider-images/4.JPG" />
+        <p>Koncert laureatów w PSM I i II st. im. H. Melcera w Kaliszu, Filip Samól - II nagroda, Kategoria D</p>
       </a>
 
       <a class="image" href="/slider-images/5.JPG">
         <img alt="img2" src="/slider-images/5.JPG" />
+        <p>Koncert laureatów w PSM I i II st. im. H. Melcera w Kaliszu, Amadeusz Maksymiuk - II nagroda,
+          Kategoria D</p>
       </a>
 
       <a class="image" href="/slider-images/6.JPG">
         <img alt="img2" src="/slider-images/6.JPG" />
+        <p>Koncert laureatów w PSM I i II st. im. H. Melcera w Kaliszu, Yukino Hayashi - I nagroda, Kategoria E</p>
       </a>
 
       <a class="image" href="/slider-images/16.JPG">
         <img alt="img2" src="/slider-images/16.JPG" />
+        <div class="caption">
+          <p>Koncert laureatów w kompleksie Calisia One, Yufeng Pan - I nagroda, Kategoria B</p>
+        </div>
       </a>
-
       <a class="image" href="/slider-images/18.jpg">
         <img alt="img2" src="/slider-images/18.jpg" />
+        <p>Koncert laureatów w kompleksie Calisia One, Maciej Domagała, I nagroda, Kategoria C i nagroda za
+          najlepsze wykonanie utworu Henryka Melcera</p>
       </a>
 
       <a class="image" href="/slider-images/13.jpg">
         <img alt="img2" src="/slider-images/13.jpg" />
+        <p>Koncert laureatów w wiedeńskiej Klaviergalerie, laureaci konkursu</p>
       </a>
 
       <a class="image" href="/slider-images/7.JPG">
         <img alt="img2" src="/slider-images/7.JPG" />
+        <div class="caption">
+          <p>Koncert laureatów w PSM I i II st. im. H. Melcera w Kaliszu, Maciej Domagała - I nagroda, Kategoria C
+            i nagroda za najlepsze wykonanie utworu Henryka Melcera</p>
+        </div>
       </a>
 
       <a class="image" href="/slider-images/15.JPG">
         <img alt="img2" src="/slider-images/15.jpg" />
+        <p>Koncert laureatów w kompleksie Calisia One, Kamila Kloc - II nagroda, Kategoria A</p>
       </a>
 
       <a class="image" href="/slider-images/17.JPG">
         <img alt="img2" src="/slider-images/17.jpg" />
+        <p>Koncert laureatów w kompleksie Calisia One, Yang Zhang, III nagroda, Kategoria E</p>
       </a>
 
       <a class="image" href="/slider-images/14.JPG">
         <img alt="img2" src="/slider-images/14.jpg" />
+        <p>Koncert laureatów w kompleksie Calisia One, przewodniczący Jury konkursu - Łukasz Byrdy</p>
       </a>
 
       <a class="image" href="/slider-images/20.JPG">
         <img alt="img2" src="/slider-images/20.jpg" />
+        <p>Koncert laureatów w kompleksie Calisia One, laureaci konkursu wraz z członkami Fundacji Calisia
+          Arts</p>
       </a>
 
       <a class="image" href="/slider-images/21.jpg">
         <img alt="img2" src="/slider-images/21.jpg" />
+        <p>Koncert laureatów w kompleksie Calisia One, laureaci konkursu - Stefano Brizzi i Maciej Domagała</p>
       </a>
 
       <a class="image" href="/slider-images/25.JPG">
         <img alt="img2" src="/slider-images/25.jpg" />
+        <p>Koncert laureatów w kompleksie Calisia One, prezes Fundacji Calisia Arts - Filip Pinczewski</p>
       </a>
 
       <a class="image" href="/slider-images/12.JPG">
         <img alt="img2" src="/slider-images/12.jpg" />
+        <p>Koncert laureatów w wiedeńskiej Klaviergalerie, prezes Fundacji Calisia Arts - Filip Pinczewski</p>
       </a>
 
       <a class="image" href="/slider-images/19.JPG">
         <img alt="img2" src="/slider-images/19.jpg" />
+        <p>Koncert laureatów w kompleksie Calisia One, Stefano Brizzi, I nagroda, Kategoria C</p>
       </a>
 
       <a class="image" href="/slider-images/26.JPG">
         <img alt="img2" src="/slider-images/26.jpg" />
+        <p>Okolicznościowe medale dla laureatów pierwszych nagród konkursu</p>
       </a>
     </div>
   </div>
