--- a/polish-version-calisia-web/contact-pl.html
+++ b/polish-version-calisia-web/contact-pl.html
@@ -32,24 +32,28 @@
             <div class="container">
                 <div class="navbar navbar-default" role="navigation">
                     <div class="navbar-collapse">
-                        <a href="indexpl.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
+                        <a href="index.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
                                 alt="logo, gold letters, calisia arts" /></a>
                         <ul class="nav navbar-nav">
-                            <li><a data-scroll href="indexpl.html" class="int-collapse-menu">Home</a></li>
-                            <li><a data-scroll href="about-pl.html" class="int-collapse-menu">O Kaliszu</a>
+                            <li><a data-scroll href="index.html" class="int-collapse-menu">Home</a></li>
+                            <li><a data-scroll href="about.html" class="int-collapse-menu">About</a>
                             </li>
-                            <li><a data-scroll href="team-pl.html" class="int-collapse-menu">Zespół</a></li>
-                            <li class="active"><a data-scroll href="contact-pl.html" class="int-collapse-menu">Kontakt</a>
+                            <li><a data-scroll href="team.html" class="int-collapse-menu">Team</a></li>
+                            <li class="active"><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a>
                             </li>
-                            <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
+                            <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
                             <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
-                            <li class="active"><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
+                            <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a>
                             </li>
+
                         </ul>
                         <div class="languages">
-                            <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="../chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
+                            <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
+                                    src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="index.html"><img class="img-flag"
+                                    src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="chinese-version/index-chinese.html"><img class="img-flag"
+                                    src="slider-images/icons8-china-48.png" /></a>
                         </div>
                         <button class="hamburger">
                             <i class="fa-solid fa-bars"></i>
@@ -57,24 +61,26 @@
                     </div>
                     <div class="hamburger-list-div">
                         <ul class="hamburger-list">
-                            <li class="li-hamburger"><a data-scroll href="indexpl.html" class="int-collapse-menu">Home</a>
+                            <li class="li-hamburger"><a data-scroll href="index.html" class="int-collapse-menu">Home</a>
                             </li>
-                            <li class="li-hamburger"><a data-scroll href="about-pl.html"
-                                    class="int-collapse-menu">O Kaliszu</a>
+                            <li class="li-hamburger"><a data-scroll href="about.html"
+                                    class="int-collapse-menu">About</a>
                             </li>
-                            <li class="li-hamburger"><a data-scroll href="team-pl.html" class="int-collapse-menu">Zespół</a>
+                            <li class="li-hamburger"><a data-scroll href="team.html" class="int-collapse-menu">Team</a>
                             </li>
-                            <li class="li-hamburger"><a data-scroll href="contact-pl.html"
-                                    class="int-collapse-menu">Kontakt</a></li>
-                            <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
+                            <li class="li-hamburger"><a data-scroll href="contact.html"
+                                    class="int-collapse-menu">Contact</a></li>
+                            <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
                             <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
-                            <li class="active"><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
-                            </li>
+                            <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a></li>
                         </ul>
                         <div class="languages-2">
-                            <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="../chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
+                            <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
+                                    src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="index.html"><img class="img-flag"
+                                    src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="chinese-version/index-chinese.html"><img class="img-flag"
+                                    src="slider-images/icons8-china-48.png" /></a>
                         </div>
 
                     </div>
@@ -89,7 +95,7 @@
             <h1 class="h1-team">Kontakt</h1>
         </div>
         <div class="width-form">
-            
+
             <div class="container-form">
                 <div data-aos="fade-up" data-aos-duration="1000" class="input-icon-form input-responsive-small">
                     <div class="inside-form-1">
@@ -126,8 +132,9 @@
             <div class="detailed-p" data-aos="fade-up" data-aos-duration="1000">
                 <p class="donation-p">Aby przekazać darowiznę, wpisz tytuł opisu przelewu:<span
                         class="bank-account-letters"> <b>"Darowizna na cele statuowe."</span></b> </br>
-                    <b><span class="bank-account-letters">Uczestnicy konkursu</span> </b>proszeni są o wpisanie w opis przelewu
-                     (w odpowiedniej kolejności): </br>
+                    <b><span class="bank-account-letters">Uczestnicy konkursu</span> </b>proszeni są o wpisanie w opis
+                    przelewu
+                    (w odpowiedniej kolejności): </br>
                     <b>Pierwszy Międzynarodowy Konkurs Pianistyczny, Imię, Nazwisko, Kategoria.</b> </br>
             </div>
         </div>
@@ -137,10 +144,12 @@
         <div data-aos="zoom-in" data-aos-duration="1000" class="container">
             <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
                 <div class="aligncenter">
-                    
+
                     <div class="socialFooter">
-                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i class="fa fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i class="fa fa-instagram"></i></a>
+                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i
+                                class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                     </div>
                     <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
                             Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
