--- a/polish-version-calisia-web/indexpl.html
+++ b/polish-version-calisia-web/indexpl.html
@@ -41,7 +41,7 @@
                             </li>
                             <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
                             <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
-                            <li class="active"><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
+                            <li><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
                             </li>
                         </ul>
                         <div class="languages">
@@ -66,7 +66,7 @@
                                     class="int-collapse-menu">Kontakt</a></li>
                             <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
                             <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
-                            <li class="active"><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
+                            <li><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
                             </li>
                         </ul>
                         <div class="languages-2">
