--- a/polish-version-calisia-web/jury.html
+++ b/polish-version-calisia-web/jury.html
@@ -36,7 +36,7 @@
                             </li>
                             <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
                             <li class="active"><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
-                            <li class="active"><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
+                            <li><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
                             </li>
                         </ul>
                         <div class="languages">
@@ -60,9 +60,8 @@
                             <li class="li-hamburger"><a data-scroll href="contact-pl.html"
                                     class="int-collapse-menu">Kontakt</a></li>
                             <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
-                            <li class="li-hamburger"><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a>
-                            </li>
-                            <li class="active"><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
+                            <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
+                            <li><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
                             </li>
                         </ul>
                         <div class="languages-2">
