--- a/polish-version-calisia-web/rulespl.html
+++ b/polish-version-calisia-web/rulespl.html
@@ -43,7 +43,7 @@
                                 <li class="active"><a data-scroll href="rulespl.html"
                                         class="int-collapse-menu">Konkurs</a></li>
                                 <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a>
-                                    <li class="active"><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
+                                    <li><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
                                     </li>
                             </ul>
                             <div class="languages">
