--- a/foto.html
+++ b/foto.html
@@ -87,7 +87,7 @@
   </header>
 
   <div class="container">
-    <h2>Photo gallery from the Concerts of the winners of the 1st Henryk Melcer International Piano Competition</h2>
+    <h2 class="gallery-title">Photo gallery from the Concerts of the winners of the 1st Henryk Melcer International Piano Competition</h2>
 
     <!-- <div id="lightgallery">
             <a href="/slider-images/team-1.JPG">
