--- a/foto.html
+++ b/foto.html
@@ -87,25 +87,8 @@
   </header>
 
   <div class="container">
-    <h2 class="gallery-title">Photo gallery from the Concerts of the winners of the 1st Henryk Melcer International Piano Competition</h2>
-
-    <!-- <div id="lightgallery">
-            <a href="/slider-images/team-1.JPG">
-                <img alt="img1" src="/slider-images/team-1.JPG" />
-            </a>
-            <a href="/slider-images/team-1.JPG">
-                <img alt="img2" src="/slider-images/team-1.JPG" />
-            </a>
-        </div> -->
-
-    <!-- <div id="lightgallery">
-            <a href="/slider-images/team-1.JPG">
-                <img alt="img1" src="/slider-images/team-1.JPG" />
-            </a>
-            <a href="/slider-images/team-1.JPG">
-                <img alt="img2" src="/slider-images/team-1.JPG" />
-            </a>
-        </div> -->
+    <h2 class="gallery-title">Photo gallery from the Concerts of the winners of the 1st Henryk Melcer International
+      Piano Competition</h2>
 
     <div class="lightgallery">
       <a class="image" href="/slider-images/2.JPG">
@@ -191,7 +174,7 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 <script>
-
+  lightGallery(document.querySelector('.lightgallery'));
   AOS.init();
 
 </script>
