--- a/polish-version-calisia-web/foto.html
+++ b/polish-version-calisia-web/foto.html
@@ -85,7 +85,7 @@
 </header>
 
   <div class="container">
-    <h2>Fotorelacja z koncertow laureatow I Miedzynarodowego Konkursu Pianistycznego im. H. Melcera </h2>
+    <h2 class="gallery-title">Fotorelacja z koncertow laureatow I Miedzynarodowego Konkursu Pianistycznego im. H. Melcera </h2>
     <div class="lightgallery">
       <a class="image" href="/slider-images/2.JPG">
         <img alt="img2" src="/slider-images/2.JPG" />
@@ -200,6 +200,7 @@
 
 <script>
 
+  lightGallery(document.querySelector('.lightgallery'));
   AOS.init();
 
 </script>
