--- a/polish-version-calisia-web/foto.html
+++ b/polish-version-calisia-web/foto.html
@@ -35,7 +35,7 @@
                     <a href="indexpl.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
                             alt="logo, gold letters, calisia arts" /></a>
                     <ul class="nav navbar-nav">
-                        <li class="active"><a data-scroll href="indexpl.html" class="int-collapse-menu">Home</a></li>
+                        <li><a data-scroll href="indexpl.html" class="int-collapse-menu">Home</a></li>
                         <li><a data-scroll href="about-pl.html" class="int-collapse-menu">O Kaliszu</a>
                         </li>
                         <li><a data-scroll href="team-pl.html" class="int-collapse-menu">Zespół</a></li>
@@ -43,7 +43,7 @@
                         </li>
                         <li><a data-scroll href="rulespl.html" class="int-collapse-menu">Konkurs</a></li>
                         <li><a data-scroll href="jury.html" class="int-collapse-menu">Jury</a></li>
-                        <li><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
+                        <li class="active"><a data-scroll href="foto.html" class="int-collapse-menu">Galeria</a>
                         </li>
                     </ul>
                     <div class="languages">
