--- a/polish-version-calisia-web/about-pl.html
+++ b/polish-version-calisia-web/about-pl.html
@@ -34,8 +34,8 @@
                         <a href="indexpl.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
                                 alt="logo, gold letters, calisia arts" /></a>
                         <ul class="nav navbar-nav">
-                            <li class="active"><a data-scroll href="indexpl.html" class="int-collapse-menu">Home</a></li>
-                            <li><a data-scroll href="about-pl.html" class="int-collapse-menu">O Kaliszu</a>
+                            <li><a data-scroll href="indexpl.html" class="int-collapse-menu">Home</a></li>
+                            <li class="active"><a data-scroll href="about-pl.html" class="int-collapse-menu">O Kaliszu</a>
                             </li>
                             <li><a data-scroll href="team-pl.html" class="int-collapse-menu">Zespół</a></li>
                             <li><a data-scroll href="contact-pl.html" class="int-collapse-menu">Kontakt</a>
