--- a/foto.html
+++ b/foto.html
@@ -111,8 +111,8 @@
         <img alt="img2" src="/slider-images/6.JPG" />
       </a>
 
-      <a class="image" href="/slider-images/16.JPG">
-        <img alt="img2" src="/slider-images/16.JPG" />
+      <a class="image" href="/slider-images/16.jpg">
+        <img alt="img2" src="/slider-images/16.jpg" />
       </a>
 
       <a class="image" href="/slider-images/18.jpg">
