--- a/polish-version-calisia-web/foto.html
+++ b/polish-version-calisia-web/foto.html
@@ -110,14 +110,14 @@
         <p>Koncert laureatów w PSM I i II st. im. H. Melcera w Kaliszu, Amadeusz Maksymiuk - II nagroda,
           Kategoria D</p>
       </a>
-      
+
       <a class="image" href="/slider-images/6.JPG">
         <img alt="img2" src="/slider-images/6.JPG" />
         <p>Koncert laureatów w PSM I i II st. im. H. Melcera w Kaliszu, Yukino Hayashi - I nagroda, Kategoria E</p>
       </a>
 
-      <a class="image" href="/slider-images/16.JPG">
-        <img alt="img2" src="/slider-images/16.JPG" />
+      <a class="image" href="/slider-images/16.jpg">
+        <img alt="img2" src="/slider-images/16.jpg" />
         <div class="caption">
           <p>Koncert laureatów w kompleksie Calisia One, Yufeng Pan - I nagroda, Kategoria B</p>
         </div>
